--- a/YelpCamp/.gitattributes
+++ b/YelpCamp/.gitattributes
@@ -1,4 +1,5 @@
-*.csharp linguist-detectable=true  
+*.csharp linguist-detectable=false
+*.Node linguist-detectable=true
 *.java linguist-detectable=false  
 *.js linguist-detectable=false  
 *.html linguist-detectable=false  
